adding all sections

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,11 +24,14 @@
                     <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+					<li class="page-scroll">
+                        <a href="#work">Work Exp.</a>
                     </li>
-					 <li class="page-scroll">
-                        <a href="#classes">Classes</a>
+					<li class="page-scroll">
+                        <a href="#club">Club</a>
+                    </li>
+					<li class="page-scroll">
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
