--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,8 @@
     {% include header.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
-	{% include classes.html %}
+	{% include work.html %}
+	{% include club.html %}
 
     {% if site.contact == "static" %}
     {% include contact_static.html %}
