Filling out more sections

--- a/_includes/club.html
+++ b/_includes/club.html
@@ -1,5 +1,5 @@
  <!-- Club Section -->
-    <section class="success" id="clun">
+    <section class="success" id="club">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
