--- a/_includes/work.html
+++ b/_includes/work.html
@@ -10,10 +10,32 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-lg-4 col-lg-offset-2">
-                    <p>Work experience is here</p>
+                    <p>Company Name 1</p>
+					<p>Position Name</p>
+					<p>Dates</p>
+					<p>Description</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Moar stuff </p>
+                    <p>Company Name 2</p>
+					<p>Position Name</p>
+					<p>Dates</p>
+					<p>Description</p>
+                </div>
+                </div>
+            </div>
+			 <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-lg-4 col-lg-offset-2">
+                    <p>Company Name 3</p>
+					<p>Position Name</p>
+					<p>Dates</p>
+					<p>Description</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Company Name 4</p>
+					<p>Position Name</p>
+					<p>Dates</p>
+					<p>Description</p>
                 </div>
                 </div>
             </div>
