--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,15 +9,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Hey! I'm Ryan Krause, some guy who codes a lot. </p>
+					
+					<p>
+						I'm currently a Senior at Iowa State University studying Software Engineering. I've worked on a TON of projects over the years, both good and bad. 
+						I've learned a lot, both in and out of school. 
+					</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
                 </div>
             </div>
         </div>
