--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,14 +14,18 @@
 					<p>
 						I'm currently a Senior at Iowa State University studying Software Engineering. I've worked on a TON of projects over the years, both good and bad. 
 						I've learned a lot, both in and out of school. Within school, I've had a lot of classes that helped me learn important concepts, and I've also been a Teaching
-						Assistant in some of my programming classes to help other students learn. Outside of classwork, I've had an Internship with Epic that's helped me learn working
-						with others and what it's like out there in the "real world." I've been an active member of Iowa State's Game Development Club for the last three years, 
-						working my way up to Secretary, and now Vice President. I've helped plan meetings, send emails, organize events, hold workshops, and created a number of games
-						within the club. 
+						Assistant in some of my programming classes to help other students learn. 
 					</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>This webpage is just to showcase some of the projects I'm proud of, as well as show off my general experience. I'd love to get in contact with you, 
+                    <p>
+					Outside of classwork, I've had an Internship with Epic that's helped me learn working
+					with others and what it's like out there in the "real world." I've been an active member of Iowa State's Game Development Club for the last three years, 
+					working my way up to Secretary, and now Vice President. I've helped plan meetings, send emails, organize events, hold workshops, and created a number of games
+					within the club. 
+					</p>
+					
+					<p>This webpage is just to showcase some of the projects I'm proud of, as well as show off my general experience. I'd love to get in contact with you, 
 					whether it's to talk about game development, programming in general, or just want to chat.
 					</p>
                 </div>
