--- a/_includes/club.html
+++ b/_includes/club.html
@@ -9,13 +9,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                   <p>IMG</p>
+                   <p>In Fall 2013 I went to my first Game Development Club Meeting. I met others also interested in game development, made some (terrible) games, and learned
+					a lot in general. In December 2014 I became Secretary for the club, in charge of interacting with the members as well as being a voice on the executive team.
+					I continued to grow my knowledge, started hosting workshops, and started to record tutorials to help others learn. </p>
                 </div>
                 <div class="col-lg-4">
 					<p>
-					In Fall 2013 I went to my first Game Development Club Meeting. I met others also interested in game development, made some (terrible) games, and learned
-					a lot in general. In December 2014 I became Secretary for the club, in charge of interacting with the members as well as being a voice on the executive team.
-					I continued to grow my knowledge, started hosting workshops, and started to record tutorials to help others learn. In May 2016 I was elected Vice President of the
+					In May 2016 I was elected Vice President of the
 					club. My duties shifted towards planning and organizing large events, and I began to host a lot more "workspace" events, a place where anyone in the club could
 					come to our lab and work on a game. Minicade mentioned above was created by me for club members to learn more about creating games. 
 					<p>
