hiding work exp

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     {% include header.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
-	{% include work.html %}
+	<!--{% include work.html %}-->
 	{% include club.html %}
 
 	<!--
