--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,9 +24,9 @@
                     <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
-					<li class="page-scroll">
+					<!--<li class="page-scroll">
                         <a href="#work">Work Exp.</a>
-                    </li>
+                    </li>-->
 					<li class="page-scroll">
                         <a href="#club">Club</a>
                     </li>
