put work back in
sorry

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -10,16 +10,16 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-lg-4 col-lg-offset-2">
-                    <p>Company Name 1</p>
-					<p>Position Name</p>
-					<p>Dates</p>
-					<p>Description</p>
+                    <p>Epic Systems</p>
+					<p>Software Developer Intern</p>
+					<p>May 2016 - Aug 2016</p>
+					<p>I Developed iOS application in Obj-C, worked with a team of developers.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Company Name 2</p>
-					<p>Position Name</p>
-					<p>Dates</p>
-					<p>Description</p>
+                    <p>Iowa State University</p>
+					<p>Teaching Assistant</p>
+					<p>Aug 2015 - Current</p>
+					<p>I Teach Java, C, C++ to students. I grade test and projects, as well as help answer programming questions.</p>
                 </div>
                 </div>
             </div>
@@ -27,16 +27,16 @@
 			 <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-lg-4 col-lg-offset-2">
-                    <p>Company Name 3</p>
-					<p>Position Name</p>
-					<p>Dates</p>
-					<p>Description</p>
+                    <p>Play-Well TEKnologies</p>
+					<p>Summer Assistant</p>
+					<p>June 2015 - Aug 2015</p>
+					<p>I Taught Engineering concepts to kids ages 5-12 using Legos</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Company Name 4</p>
-					<p>Position Name</p>
-					<p>Dates</p>
-					<p>Description</p>
+                    <p>Iowa State University</p>
+					<p>Peer Tutor</p>
+					<p>Feb 2014 - May 2015</p>
+					<p>I Taught Calculus to students in a group setting.</p>
                 </div>
                 </div>
             </div>
