--- a/_includes/work.html
+++ b/_includes/work.html
@@ -10,15 +10,15 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-lg-4 col-lg-offset-2">
-                    <p>Epic Systems</p>
+                    <p><b>Epic Systems</b></p>
 					<p>Software Developer Intern</p>
-					<p>May 2016 - Aug 2016</p>
+					<p><i>May 2016 - Aug 2016</i></p>
 					<p>I Developed iOS application in Obj-C, worked with a team of developers.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Iowa State University</p>
+                    <p><b>Iowa State University</b></p>
 					<p>Teaching Assistant</p>
-					<p>Aug 2015 - Current</p>
+					<p><i>Aug 2015 - Current</i></p>
 					<p>I Teach Java, C, C++ to students. I grade test and projects, as well as help answer programming questions.</p>
                 </div>
                 </div>
@@ -27,15 +27,15 @@
 			 <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-lg-4 col-lg-offset-2">
-                    <p>Play-Well TEKnologies</p>
+                    <p><b>Play-Well TEKnologies</b></p>
 					<p>Summer Assistant</p>
-					<p>June 2015 - Aug 2015</p>
+					<p><i>June 2015 - Aug 2015</i></p>
 					<p>I Taught Engineering concepts to kids ages 5-12 using Legos</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Iowa State University</p>
+                    <p><b>Iowa State University</b></p>
 					<p>Peer Tutor</p>
-					<p>Feb 2014 - May 2015</p>
+					<p><i>Feb 2014 - May 2015</i></p>
 					<p>I Taught Calculus to students in a group setting.</p>
                 </div>
                 </div>
