--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">Projects</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -30,11 +30,13 @@
 					<li class="page-scroll">
                         <a href="#club">Club</a>
                     </li>
-					<!--
+					<li class="page-scroll">
+                        <a href="#genEd">Gen. Ed.</a>
+                    </li>
 					<li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
-					-->
+				
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
