--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,9 @@
     {% include about.html %}
 	{% include work.html %}
 	{% include club.html %}
+	{% include genEds.html %}
 
-	<!--
+	
     {% if site.contact == "static" %}
     {% include contact_static.html %}
     {% elsif site.contact == "disqus" %}
@@ -17,7 +18,7 @@
     {% else %}
     {% include contact.html %}
     {% endif %}
-	-->
+	
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
