--- a/_includes/genEds.html
+++ b/_includes/genEds.html
@@ -3,41 +3,33 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>General Educations</h2>
+                    <h2>General Education Reflection</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 col-lg-offset-0">
-                <div class="col-lg-12">
-                    <p><b>Epic Systems</b></p>
-					<p>Software Developer Intern</p>
-					<p><i>May 2016 - Aug 2016</i></p>
-					<p>I Developed iOS application in Obj-C, worked with a team of developers.</p>
-                </div>
-                <div class="col-lg-12">
-                    <p><b>Iowa State University</b></p>
-					<p>Teaching Assistant</p>
-					<p><i>Aug 2015 - Current</i></p>
-					<p>I Teach Java, C, C++ to students. I grade test and projects, as well as help answer programming questions.</p>
-                </div>
-                </div>
-            </div>
-			<br>
-			 <div class="row">
-                <div class="col-lg-8 col-lg-offset-0">
-                    <div class="col-lg-4 col-lg-offset-0">
-                    <p><b>Play-Well TEKnologies</b></p>
-					<p>Summer Assistant</p>
-					<p><i>June 2015 - Aug 2015</i></p>
-					<p>I Taught Engineering concepts to kids ages 5-12 using Legos</p>
-                </div>
-                <div class="col-lg-4">
-                    <p><b>Iowa State University</b></p>
-					<p>Peer Tutor</p>
-					<p><i>Feb 2014 - May 2015</i></p>
-					<p>I Taught Calculus to students in a group setting.</p>
-                </div>
+                <div class="col-lg-push-1 col-lg-10">
+                   <p>
+						My short term goals, within the next one or two years, are to finish school,
+						then to get a job at a game development company. Long term, I would hope to be
+						settled/in high standing in an established game dev. company, or have started my own.
+						Either way, I would love to have made games that are common household names that people
+						know and love. That way, I can say "I worked on that" and feel super proud of it.
+					</p>
+             
+					<p>
+						In my general education elective classes, one of the biggest skills I've learned
+						is the ability to communicate well with others. Because I'm not just talking to other
+						engineers, I have to be able to communicate clearly with people from different
+						disciplines. With that, I'm capable of fully understanding a problem, as well as making 
+						sure others understand it as well.
+					<p>
+					
+					<p>
+						When communicating with others, it's possible that they might give suggestions or ideas that
+						you may have originally missed. When getting feedback from others, it makes the end product even 
+						better. This better product could have impacts on society that no one may have ever seen before.
+					<p>
                 </div>
             </div>
         </div>
