added reflection section

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -34,6 +34,9 @@
                         <a href="#genEd">Gen. Ed.</a>
                     </li>
 					<li class="page-scroll">
+                        <a href="#reflection">Reflection</a>
+                    </li>
+					<li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
 				
