--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 	{% include work.html %}
 	{% include club.html %}
 	{% include genEds.html %}
+	{% include reflection.html %}
 
 	
     {% if site.contact == "static" %}
