--- a/_includes/genEds.html
+++ b/_includes/genEds.html
@@ -22,13 +22,26 @@
 						is the ability to communicate well with others. Because I'm not just talking to other
 						engineers, I have to be able to communicate clearly with people from different
 						disciplines. With that, I'm capable of fully understanding a problem, as well as making 
-						sure others understand it as well.
+						sure others understand it as well. For example, in Com Sci 437, I had to give a 20 minute 
+						presentation on Networking in Unity, a highly technical subject. While I was talking to other
+						game developers, networking with servers and clients can be foreign to most people, and some of
+						the terminology can be intimidating. As a result, I had to fully understand it myself so that I
+						could present/demo it, but I also had to be able to translate the new terminology into 
+						everyday language that everyone could understand. In the end, having to teach that topic to 
+						others, helped me make sure that I myself fully understood the topic.
 					<p>
 					
 					<p>
 						When communicating with others, it's possible that they might give suggestions or ideas that
 						you may have originally missed. When getting feedback from others, it makes the end product even 
 						better. This better product could have impacts on society that no one may have ever seen before.
+						For example, one of the large personal projects I've been working on is Minicade. One of the
+						aspects of Minicade is the Minicade Creator, which allows other people to create their own minigames
+						for Minicade. Because I'm the one who created it, I may think that something in the creation process is
+						easy or self-explanitory. As others tried to create games using it, they voiced some issues with how the
+						process was, which led to making the creator even better for everyone. As a result, other developers
+						are able to use the Minicade Creator at a higher level than before, which can help them become better
+						developers using my tool as practice, which then helps the future of Software Engineering overall.
 					<p>
                 </div>
             </div>
