--- a/_includes/reflection.html
+++ b/_includes/reflection.html
@@ -10,12 +10,64 @@
             <div class="row">
                 <div class="col-lg-push-1 col-lg-10">
                    <p>
-						Reflection TBA
+						ISU has helped prepare me for a lot of things in the Software Engineering field. In SE 491 and ComSci 402
+						I've had to do a lot more designing of my project before beginning development. By doing this, I'm required to 
+						think about the long-scale project, instead of just doing things as I feel like. With these documents, I'm also
+						able to have a guide or road map to the project, and if the team is derailing, it's easy to point them in the
+						right direction. These two classes are special, because we're using the Microsoft Hololens, a new tech. that
+						doesn't have a lot of information about it. We hope by the end of the year that we'll have a lot of research
+						completed on what the Hololens can and can't do, and we're excited to help the Hololens community grow based
+						off of what we find. 
 				   </p>
              
 					<p>
+						ISU also helped with working in groups. My first main group project was ComSci 309, where I was in a group
+						with three other people, and we were working on creating NMC. I learned that a lot of people need to be pushed
+						when trying to meet a deadline, and I need to step in if things aren't working out. It's also a good idea
+						to check up on people and see how things are going, instead of realizing the night before that things aren't
+						ready to go. In SE 491 we are also learning about how to be ethical and professional in a group setting,
+						so that feelings aren't hurt, and we can get the job done in a way that can be deemed "good" by all parties
+						involved.
+					<p>
 					
 					<p>
+						In a lot of my personal projects, I've had to look to online resources such as StackOverflow, Unity Answers
+						forums, etc. for tips and hints on how to get certain sections of code working correctly. A lot of the projects
+						in my other classes, such as ComSci 228 or ComSci 229 required me to look up a lot of information, but this
+						information usually was found inside of the teacher's notes. Most of the time, the answer could be found online,
+						but in some cases, I would ask friends, TA's, or the professor for some tips on how to get around a problem.
+					</p>
+					
+					<p>
+						Being in the Game Development Club helped me a lot in my schoolwork too. A lot of my game experience was
+						self-taught, I had to teach myself C#, Game Maker Language, and a lot of object-oriented programming early
+						in my college learning, which helped me learn Java (similar to C#) and Javascript (which is similar to Game
+						Maker Language) when I came to it. Overall, it just helped me become a better programmer. Plus, now that I've
+						become a senior in the club (both literally and figuratively), I am able to host workshops to help others learn,
+						something that wasn't really offered to me at the time when I was starting out. 
+					</p>
+					
+					<p>
+						As I start to transition out of school, something that my friends and I are beginning to work on is a large
+						VR game project. Due to my expertise in programming and working in a group setting, I've played a large part
+						in setting up tasks to do, making sure everything is running smoothly, and making sure everyone is focused on
+						what needs to be done. I obviously have no hands-on experience with running large projects, so it's a large risk,
+						but I'm working at it as best as I can. On the plus side, I'm able to lend a hand in creating this large project,
+						due to the skills I've picked up while at school. 
+					</p>
+					
+					<p>
+						In the end, if I could go back and do my undergrad work again, I don't think I would really change anything. Not
+						counting all of the classes I had to take, I'm pretty happy with the classes I chose to take myself, and I'm proud
+						of all the work and growth that came out of being in the Game Development Club. I guess if I had to nitpick, I would
+						go back to a few of the group projects I did in my earlier years, and get people to focus more using the knowledge I 
+						have now. However, we got best project in ComSci 309, so I think I'm fine with where things ended up. :)
+					</p>
+					
+					<p>
+						Thanks All,
+						Ryan D. Krause
+					</p>
                 </div>
             </div>
         </div>
