--- a/_includes/genEds.html
+++ b/_includes/genEds.html
@@ -18,17 +18,16 @@
 					</p>
              
 					<p>
-						In my general education elective classes, one of the biggest skills I've learned
-						is the ability to communicate well with others. Because I'm not just talking to other
-						engineers, I have to be able to communicate clearly with people from different
-						disciplines. With that, I'm capable of fully understanding a problem, as well as making 
-						sure others understand it as well. For example, in Com Sci 437, I had to give a 20 minute 
-						presentation on Networking in Unity, a highly technical subject. While I was talking to other
-						game developers, networking with servers and clients can be foreign to most people, and some of
-						the terminology can be intimidating. As a result, I had to fully understand it myself so that I
-						could present/demo it, but I also had to be able to translate the new terminology into 
-						everyday language that everyone could understand. In the end, having to teach that topic to 
-						others, helped me make sure that I myself fully understood the topic.
+						In my general education elective classes, one of the most important skills I've learned
+						is the ability to communicate well with others in an clear and efficient manner. In most
+						engineering problems, engineers aren't the only people involved. For example, there's project
+						managers, testers, shareholders, etc. who don't always have a technical mindset. In Speech class,
+						English 212, we're taught different ways to explain concepts. Depending on our audience, we have
+						to change our word choice that we use, go into detail on more things, and so on. Because I have to
+						clarify differently depending on the situation, I have to understand what I'm explaining on multiple
+						levels. Then, with these different audiences and understanding in mind, I have to adapt my explanation
+						accordingly. In the end, I understand the project at hand more because of having to explain it in
+						multiple ways to multiple people.
 					<p>
 					
 					<p>
