--- a/_includes/work.html
+++ b/_includes/work.html
@@ -13,13 +13,13 @@
                     <p><b>Epic Systems</b></p>
 					<p>Software Developer Intern</p>
 					<p><i>May 2016 - Aug 2016</i></p>
-					<p>I Developed iOS application in Obj-C, worked with a team of developers.</p>
+					<p>As an Intern, I worked with a team of 10 developers on creating an iOS application in Obj-C, a new language for me. This application pulled data from different areas within Epic's database to display to the user. At the end of the summer, I presented my project to a large group of other interns and employees.</p>
                 </div>
                 <div class="col-lg-4">
                     <p><b>Iowa State University</b></p>
 					<p>Teaching Assistant</p>
 					<p><i>Aug 2015 - Current</i></p>
-					<p>I Teach Java, C, C++ to students. I grade test and projects, as well as help answer programming questions.</p>
+					<p>As a Teaching Assistant I Teach Java, C, C++ to students. I also grade tests and projects, as well as help answer programming questions during office hours.</p>
                 </div>
                 </div>
             </div>
@@ -30,13 +30,13 @@
                     <p><b>Play-Well TEKnologies</b></p>
 					<p>Summer Assistant</p>
 					<p><i>June 2015 - Aug 2015</i></p>
-					<p>I Taught Engineering concepts to kids ages 5-12 using Legos</p>
+					<p>This was a summer job in which I taught Engineering concepts to kids ages 5-12 using Legos. For example, I would build and explain the different parts of a catapult, then have the kids build their best catapult that could shoot the farthest and most accurately. I learned how to take complicated engineering concepts and explain it so that little kids would be able to understand.</p>
                 </div>
                 <div class="col-lg-4">
                     <p><b>Iowa State University</b></p>
 					<p>Peer Tutor</p>
 					<p><i>Feb 2014 - May 2015</i></p>
-					<p>I Taught Calculus to students in a group setting.</p>
+					<p>I taught Calculus to students in a group setting. This was my first tutoring job in college, so I had to adapt my old tutoring habits to new college level courses.</p>
                 </div>
                 </div>
             </div>
