--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,12 +30,12 @@
 					<li class="page-scroll">
                         <a href="#club">Club</a>
                     </li>
-					<li class="page-scroll">
+					<!--<li class="page-scroll">
                         <a href="#genEd">Gen. Ed.</a>
                     </li>
 					<li class="page-scroll">
                         <a href="#reflection">Reflection</a>
-                    </li>
+                    </li>-->
 					<li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
