--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
 				<div class="col-lg-push-1 col-lg-10">
-                    <p>Hey! I'm Ryan Krause, some guy who codes a lot. </p>
+                    <p>Hey! I'm Ryan D. Krause, some guy who codes a lot. </p>
 					
 					<p>
 						I'm currently a Senior at Iowa State University studying Software Engineering. I've worked on a TON of projects over the years, both good and bad. 
